add boleta peru

--- a/htdocs/langs/es_PE/bills.lang
+++ b/htdocs/langs/es_PE/bills.lang
@@ -4,3 +4,6 @@ ConfirmClassifyPaidPartiallyReasonDiscountNoVat=El resto a pagar <b>(%s %s)</b> 
 AmountOfBillsByMonthHT=Importe de las facturas por mes (Sin IGV)
 VATIsNotUsedForInvoice=* IGV no aplicable  art-293B del CGI
 PDFCrabeDescription=Modelo de factura completo (IGV,  método de pago a mostrar, logotipo...)
+InvoiceBoleta=Boleta estándar
+InvoiceBoletaAsk=Boleta estándar
+InvoiceBoletaDesc=Este tipo de boleta es la boleta tradicional.
